parser/src/lib/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> command_star
Rule 2     command_star -> command_star command
Rule 3     command_star -> <empty>
Rule 4     command -> check_synth_command
Rule 5     command -> constraint_command
Rule 6     command -> var_decl_command
Rule 7     command -> inv_constraint_command
Rule 8     command -> set_feature_command
Rule 9     command -> synth_fun_command
Rule 10    command -> synth_inv_command
Rule 11    command -> sort_decl_command
Rule 12    command -> fun_def_command
Rule 13    command -> sort_def_command
Rule 14    command -> set_logic_command
Rule 15    command -> set_option_command
Rule 16    command -> declare_datatype_command
Rule 17    command -> declare_datatypes_command
Rule 18    check_synth_command -> TK_LPAREN TK_CHECK_SYNTH TK_RPAREN
Rule 19    constraint_command -> TK_LPAREN TK_CONSTRAINT term TK_RPAREN
Rule 20    var_decl_command -> TK_LPAREN TK_DECLARE_VAR TK_SYMBOL sort_expr TK_RPAREN
Rule 21    inv_constraint_command -> TK_LPAREN TK_INV_CONSTRAINT TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_RPAREN
Rule 22    set_feature_command -> TK_LPAREN TK_SET_FEATURE TK_COLON TK_SYMBOL TK_BOOL_CONST TK_RPAREN
Rule 23    synth_fun_command -> TK_LPAREN TK_SYNTH_FUN TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr opt_grammar_def TK_RPAREN
Rule 24    synth_inv_command -> TK_LPAREN TK_SYNTH_INV TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN opt_grammar_def TK_RPAREN
Rule 25    sort_decl_command -> TK_LPAREN TK_DECLARE_SORT TK_SYMBOL TK_NUMERAL TK_RPAREN
Rule 26    fun_def_command -> TK_LPAREN TK_DEFINE_FUN TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr term TK_RPAREN
Rule 27    sort_def_command -> TK_LPAREN TK_DEFINE_SORT TK_SYMBOL symbol_star sort_expr TK_RPAREN
Rule 28    set_logic_command -> TK_LPAREN TK_SET_LOGIC TK_SYMBOL TK_RPAREN
Rule 29    set_option_command -> TK_LPAREN TK_SET_OPTION TK_COLON TK_SYMBOL literal TK_RPAREN
Rule 30    declare_datatype_command -> TK_LPAREN TK_DECLARE_DATATYPE TK_SYMBOL datatype_constructor_list TK_RPAREN
Rule 31    declare_datatype_command -> TK_LPAREN TK_DECLARE_DATATYPE TK_LPAREN TK_SYMBOL TK_NUMERAL TK_RPAREN datatype_constructor_list TK_RPAREN
Rule 32    declare_datatypes_command -> TK_LPAREN TK_DECLARE_DATATYPES TK_LPAREN sort_name_and_arity_plus TK_RPAREN TK_LPAREN datatype_constructor_list_plus TK_RPAREN TK_RPAREN
Rule 33    term -> identifier
Rule 34    term -> literal
Rule 35    term -> TK_LPAREN identifier term_plus TK_RPAREN
Rule 36    term -> TK_LPAREN TK_EXISTS TK_LPAREN sorted_symbol_plus TK_RPAREN term TK_RPAREN
Rule 37    term -> TK_LPAREN TK_FORALL TK_LPAREN sorted_symbol_plus TK_RPAREN term TK_RPAREN
Rule 38    term -> TK_LPAREN TK_LET TK_LPAREN binding_plus TK_RPAREN term TK_RPAREN
Rule 39    sort_expr -> identifier
Rule 40    sort_expr -> TK_LPAREN identifier sort_expr_plus TK_RPAREN
Rule 41    term_plus -> term_plus term
Rule 42    term_plus -> term
Rule 43    sort_expr_plus -> sort_expr_plus sort_expr
Rule 44    sort_expr_plus -> sort_expr
Rule 45    sorted_symbol_star -> sorted_symbol_star sorted_symbol
Rule 46    sorted_symbol_star -> <empty>
Rule 47    sorted_symbol_plus -> sorted_symbol_plus sorted_symbol
Rule 48    sorted_symbol_plus -> sorted_symbol
Rule 49    sorted_symbol -> TK_LPAREN TK_SYMBOL sort_expr TK_RPAREN
Rule 50    opt_grammar_def -> grammar_def
Rule 51    opt_grammar_def -> <empty>
Rule 52    grammar_def -> TK_LPAREN sorted_symbol_plus TK_RPAREN TK_LPAREN grouped_rule_list_plus TK_RPAREN
Rule 53    grouped_rule_list_plus -> grouped_rule_list_plus grouped_rule_list
Rule 54    grouped_rule_list_plus -> grouped_rule_list
Rule 55    grouped_rule_list -> TK_LPAREN TK_SYMBOL sort_expr TK_LPAREN grammar_term_plus TK_RPAREN TK_RPAREN
Rule 56    grammar_term_plus -> grammar_term_plus grammar_term
Rule 57    grammar_term_plus -> grammar_term
Rule 58    grammar_term -> TK_LPAREN TK_CONSTANT sort_expr TK_RPAREN
Rule 59    grammar_term -> TK_LPAREN TK_VARIABLE sort_expr TK_RPAREN
Rule 60    grammar_term -> binder_free_term
Rule 61    binder_free_term -> identifier
Rule 62    binder_free_term -> literal
Rule 63    binder_free_term -> TK_LPAREN identifier binder_free_term_plus TK_RPAREN
Rule 64    binder_free_term_plus -> binder_free_term_plus binder_free_term
Rule 65    binder_free_term_plus -> binder_free_term
Rule 66    symbol_star -> symbol_plus
Rule 67    symbol_star -> TK_LPAREN TK_RPAREN
Rule 68    symbol_plus -> TK_LPAREN symbol_plus TK_SYMBOL TK_RPAREN
Rule 69    symbol_plus -> TK_LPAREN TK_SYMBOL TK_RPAREN
Rule 70    binding_plus -> binding_plus binding
Rule 71    binding_plus -> binding
Rule 72    binding -> TK_LPAREN TK_SYMBOL term TK_RPAREN
Rule 73    literal -> TK_NUMERAL
Rule 74    literal -> TK_BOOL_CONST
Rule 75    literal -> TK_DECIMAL
Rule 76    literal -> TK_HEX_CONST
Rule 77    literal -> TK_BIN_CONST
Rule 78    literal -> TK_STRING_LITERAL
Rule 79    identifier -> TK_SYMBOL
Rule 80    identifier -> TK_LPAREN TK_UNDERSCORE TK_SYMBOL index_plus TK_RPAREN
Rule 81    index_plus -> index_plus index
Rule 82    index_plus -> index
Rule 83    index -> TK_NUMERAL
Rule 84    index -> TK_SYMBOL
Rule 85    sort_name_and_arity_plus -> sort_name_and_arity_plus sort_name_and_arity
Rule 86    sort_name_and_arity_plus -> sort_name_and_arity
Rule 87    sort_name_and_arity -> TK_LPAREN TK_SYMBOL TK_NUMERAL TK_RPAREN
Rule 88    datatype_constructor_list_plus -> datatype_constructor_list_plus datatype_constructor_list
Rule 89    datatype_constructor_list_plus -> datatype_constructor_list
Rule 90    datatype_constructor_list -> parameterized_datatype_constructor_list
Rule 91    datatype_constructor_list -> simple_datatype_constructor_list
Rule 92    parameterized_datatype_constructor_list -> TK_LPAREN TK_PAR symbol_plus TK_LPAREN constructor_definition_plus TK_RPAREN TK_RPAREN
Rule 93    simple_datatype_constructor_list -> TK_LPAREN constructor_definition_plus TK_RPAREN
Rule 94    constructor_definition_plus -> constructor_definition_plus constructor_definition
Rule 95    constructor_definition_plus -> constructor_definition
Rule 96    constructor_definition -> TK_LPAREN TK_SYMBOL sorted_symbol_star TK_RPAREN

Terminals, with rules where they appear

TK_BIN_CONST         : 77
TK_BOOL_CONST        : 22 74
TK_CHECK_SYNTH       : 18
TK_COLON             : 22 29
TK_CONSTANT          : 58
TK_CONSTRAINT        : 19
TK_DECIMAL           : 75
TK_DECLARE_DATATYPE  : 30 31
TK_DECLARE_DATATYPES : 32
TK_DECLARE_SORT      : 25
TK_DECLARE_VAR       : 20
TK_DEFINE_FUN        : 26
TK_DEFINE_SORT       : 27
TK_EXISTS            : 36
TK_FORALL            : 37
TK_HEX_CONST         : 76
TK_INV_CONSTRAINT    : 21
TK_LET               : 38
TK_LPAREN            : 18 19 20 21 22 23 23 24 24 25 26 26 27 28 29 30 31 31 32 32 32 35 36 36 37 37 38 38 40 49 52 52 55 55 58 59 63 67 68 69 72 80 87 92 92 93 96
TK_NUMERAL           : 25 31 73 83 87
TK_PAR               : 92
TK_RPAREN            : 18 19 20 21 22 23 23 24 24 25 26 26 27 28 29 30 31 31 32 32 32 35 36 36 37 37 38 38 40 49 52 52 55 55 58 59 63 67 68 69 72 80 87 92 92 93 96
TK_SET_FEATURE       : 22
TK_SET_LOGIC         : 28
TK_SET_OPTION        : 29
TK_STRING_LITERAL    : 78
TK_SYMBOL            : 20 21 21 21 21 22 23 24 25 26 27 28 29 30 31 49 55 68 69 72 79 80 84 87 96
TK_SYNTH_FUN         : 23
TK_SYNTH_INV         : 24
TK_UNDERSCORE        : 80
TK_VARIABLE          : 59
error                : 

Nonterminals, with rules where they appear

binder_free_term     : 60 64 65
binder_free_term_plus : 63 64
binding              : 70 71
binding_plus         : 38 70
check_synth_command  : 4
command              : 2
command_star         : 1 2
constraint_command   : 5
constructor_definition : 94 95
constructor_definition_plus : 92 93 94
datatype_constructor_list : 30 31 88 89
datatype_constructor_list_plus : 32 88
declare_datatype_command : 16
declare_datatypes_command : 17
fun_def_command      : 12
grammar_def          : 50
grammar_term         : 56 57
grammar_term_plus    : 55 56
grouped_rule_list    : 53 54
grouped_rule_list_plus : 52 53
identifier           : 33 35 39 40 61 63
index                : 81 82
index_plus           : 80 81
inv_constraint_command : 7
literal              : 29 34 62
opt_grammar_def      : 23 24
parameterized_datatype_constructor_list : 90
program              : 0
set_feature_command  : 8
set_logic_command    : 14
set_option_command   : 15
simple_datatype_constructor_list : 91
sort_decl_command    : 11
sort_def_command     : 13
sort_expr            : 20 23 26 27 43 44 49 55 58 59
sort_expr_plus       : 40 43
sort_name_and_arity  : 85 86
sort_name_and_arity_plus : 32 85
sorted_symbol        : 45 47 48
sorted_symbol_plus   : 36 37 47 52
sorted_symbol_star   : 23 24 26 45 96
symbol_plus          : 66 68 92
symbol_star          : 27
synth_fun_command    : 9
synth_inv_command    : 10
term                 : 19 26 36 37 38 41 42 72
term_plus            : 35 41
var_decl_command     : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . command_star
    (2) command_star -> . command_star command
    (3) command_star -> .

    TK_LPAREN       reduce using rule 3 (command_star -> .)
    $end            reduce using rule 3 (command_star -> .)

    program                        shift and go to state 1
    command_star                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> command_star .
    (2) command_star -> command_star . command
    (4) command -> . check_synth_command
    (5) command -> . constraint_command
    (6) command -> . var_decl_command
    (7) command -> . inv_constraint_command
    (8) command -> . set_feature_command
    (9) command -> . synth_fun_command
    (10) command -> . synth_inv_command
    (11) command -> . sort_decl_command
    (12) command -> . fun_def_command
    (13) command -> . sort_def_command
    (14) command -> . set_logic_command
    (15) command -> . set_option_command
    (16) command -> . declare_datatype_command
    (17) command -> . declare_datatypes_command
    (18) check_synth_command -> . TK_LPAREN TK_CHECK_SYNTH TK_RPAREN
    (19) constraint_command -> . TK_LPAREN TK_CONSTRAINT term TK_RPAREN
    (20) var_decl_command -> . TK_LPAREN TK_DECLARE_VAR TK_SYMBOL sort_expr TK_RPAREN
    (21) inv_constraint_command -> . TK_LPAREN TK_INV_CONSTRAINT TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_RPAREN
    (22) set_feature_command -> . TK_LPAREN TK_SET_FEATURE TK_COLON TK_SYMBOL TK_BOOL_CONST TK_RPAREN
    (23) synth_fun_command -> . TK_LPAREN TK_SYNTH_FUN TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr opt_grammar_def TK_RPAREN
    (24) synth_inv_command -> . TK_LPAREN TK_SYNTH_INV TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN opt_grammar_def TK_RPAREN
    (25) sort_decl_command -> . TK_LPAREN TK_DECLARE_SORT TK_SYMBOL TK_NUMERAL TK_RPAREN
    (26) fun_def_command -> . TK_LPAREN TK_DEFINE_FUN TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr term TK_RPAREN
    (27) sort_def_command -> . TK_LPAREN TK_DEFINE_SORT TK_SYMBOL symbol_star sort_expr TK_RPAREN
    (28) set_logic_command -> . TK_LPAREN TK_SET_LOGIC TK_SYMBOL TK_RPAREN
    (29) set_option_command -> . TK_LPAREN TK_SET_OPTION TK_COLON TK_SYMBOL literal TK_RPAREN
    (30) declare_datatype_command -> . TK_LPAREN TK_DECLARE_DATATYPE TK_SYMBOL datatype_constructor_list TK_RPAREN
    (31) declare_datatype_command -> . TK_LPAREN TK_DECLARE_DATATYPE TK_LPAREN TK_SYMBOL TK_NUMERAL TK_RPAREN datatype_constructor_list TK_RPAREN
    (32) declare_datatypes_command -> . TK_LPAREN TK_DECLARE_DATATYPES TK_LPAREN sort_name_and_arity_plus TK_RPAREN TK_LPAREN datatype_constructor_list_plus TK_RPAREN TK_RPAREN

    $end            reduce using rule 1 (program -> command_star .)
    TK_LPAREN       shift and go to state 18

    command                        shift and go to state 3
    check_synth_command            shift and go to state 4
    constraint_command             shift and go to state 5
    var_decl_command               shift and go to state 6
    inv_constraint_command         shift and go to state 7
    set_feature_command            shift and go to state 8
    synth_fun_command              shift and go to state 9
    synth_inv_command              shift and go to state 10
    sort_decl_command              shift and go to state 11
    fun_def_command                shift and go to state 12
    sort_def_command               shift and go to state 13
    set_logic_command              shift and go to state 14
    set_option_command             shift and go to state 15
    declare_datatype_command       shift and go to state 16
    declare_datatypes_command      shift and go to state 17

state 3

    (2) command_star -> command_star command .

    TK_LPAREN       reduce using rule 2 (command_star -> command_star command .)
    $end            reduce using rule 2 (command_star -> command_star command .)


state 4

    (4) command -> check_synth_command .

    TK_LPAREN       reduce using rule 4 (command -> check_synth_command .)
    $end            reduce using rule 4 (command -> check_synth_command .)


state 5

    (5) command -> constraint_command .

    TK_LPAREN       reduce using rule 5 (command -> constraint_command .)
    $end            reduce using rule 5 (command -> constraint_command .)


state 6

    (6) command -> var_decl_command .

    TK_LPAREN       reduce using rule 6 (command -> var_decl_command .)
    $end            reduce using rule 6 (command -> var_decl_command .)


state 7

    (7) command -> inv_constraint_command .

    TK_LPAREN       reduce using rule 7 (command -> inv_constraint_command .)
    $end            reduce using rule 7 (command -> inv_constraint_command .)


state 8

    (8) command -> set_feature_command .

    TK_LPAREN       reduce using rule 8 (command -> set_feature_command .)
    $end            reduce using rule 8 (command -> set_feature_command .)


state 9

    (9) command -> synth_fun_command .

    TK_LPAREN       reduce using rule 9 (command -> synth_fun_command .)
    $end            reduce using rule 9 (command -> synth_fun_command .)


state 10

    (10) command -> synth_inv_command .

    TK_LPAREN       reduce using rule 10 (command -> synth_inv_command .)
    $end            reduce using rule 10 (command -> synth_inv_command .)


state 11

    (11) command -> sort_decl_command .

    TK_LPAREN       reduce using rule 11 (command -> sort_decl_command .)
    $end            reduce using rule 11 (command -> sort_decl_command .)


state 12

    (12) command -> fun_def_command .

    TK_LPAREN       reduce using rule 12 (command -> fun_def_command .)
    $end            reduce using rule 12 (command -> fun_def_command .)


state 13

    (13) command -> sort_def_command .

    TK_LPAREN       reduce using rule 13 (command -> sort_def_command .)
    $end            reduce using rule 13 (command -> sort_def_command .)


state 14

    (14) command -> set_logic_command .

    TK_LPAREN       reduce using rule 14 (command -> set_logic_command .)
    $end            reduce using rule 14 (command -> set_logic_command .)


state 15

    (15) command -> set_option_command .

    TK_LPAREN       reduce using rule 15 (command -> set_option_command .)
    $end            reduce using rule 15 (command -> set_option_command .)


state 16

    (16) command -> declare_datatype_command .

    TK_LPAREN       reduce using rule 16 (command -> declare_datatype_command .)
    $end            reduce using rule 16 (command -> declare_datatype_command .)


state 17

    (17) command -> declare_datatypes_command .

    TK_LPAREN       reduce using rule 17 (command -> declare_datatypes_command .)
    $end            reduce using rule 17 (command -> declare_datatypes_command .)


state 18

    (18) check_synth_command -> TK_LPAREN . TK_CHECK_SYNTH TK_RPAREN
    (19) constraint_command -> TK_LPAREN . TK_CONSTRAINT term TK_RPAREN
    (20) var_decl_command -> TK_LPAREN . TK_DECLARE_VAR TK_SYMBOL sort_expr TK_RPAREN
    (21) inv_constraint_command -> TK_LPAREN . TK_INV_CONSTRAINT TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_RPAREN
    (22) set_feature_command -> TK_LPAREN . TK_SET_FEATURE TK_COLON TK_SYMBOL TK_BOOL_CONST TK_RPAREN
    (23) synth_fun_command -> TK_LPAREN . TK_SYNTH_FUN TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr opt_grammar_def TK_RPAREN
    (24) synth_inv_command -> TK_LPAREN . TK_SYNTH_INV TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN opt_grammar_def TK_RPAREN
    (25) sort_decl_command -> TK_LPAREN . TK_DECLARE_SORT TK_SYMBOL TK_NUMERAL TK_RPAREN
    (26) fun_def_command -> TK_LPAREN . TK_DEFINE_FUN TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr term TK_RPAREN
    (27) sort_def_command -> TK_LPAREN . TK_DEFINE_SORT TK_SYMBOL symbol_star sort_expr TK_RPAREN
    (28) set_logic_command -> TK_LPAREN . TK_SET_LOGIC TK_SYMBOL TK_RPAREN
    (29) set_option_command -> TK_LPAREN . TK_SET_OPTION TK_COLON TK_SYMBOL literal TK_RPAREN
    (30) declare_datatype_command -> TK_LPAREN . TK_DECLARE_DATATYPE TK_SYMBOL datatype_constructor_list TK_RPAREN
    (31) declare_datatype_command -> TK_LPAREN . TK_DECLARE_DATATYPE TK_LPAREN TK_SYMBOL TK_NUMERAL TK_RPAREN datatype_constructor_list TK_RPAREN
    (32) declare_datatypes_command -> TK_LPAREN . TK_DECLARE_DATATYPES TK_LPAREN sort_name_and_arity_plus TK_RPAREN TK_LPAREN datatype_constructor_list_plus TK_RPAREN TK_RPAREN

    TK_CHECK_SYNTH  shift and go to state 19
    TK_CONSTRAINT   shift and go to state 20
    TK_DECLARE_VAR  shift and go to state 21
    TK_INV_CONSTRAINT shift and go to state 22
    TK_SET_FEATURE  shift and go to state 23
    TK_SYNTH_FUN    shift and go to state 24
    TK_SYNTH_INV    shift and go to state 25
    TK_DECLARE_SORT shift and go to state 26
    TK_DEFINE_FUN   shift and go to state 27
    TK_DEFINE_SORT  shift and go to state 28
    TK_SET_LOGIC    shift and go to state 29
    TK_SET_OPTION   shift and go to state 30
    TK_DECLARE_DATATYPE shift and go to state 31
    TK_DECLARE_DATATYPES shift and go to state 32


state 19

    (18) check_synth_command -> TK_LPAREN TK_CHECK_SYNTH . TK_RPAREN

    TK_RPAREN       shift and go to state 33


state 20

    (19) constraint_command -> TK_LPAREN TK_CONSTRAINT . term TK_RPAREN
    (33) term -> . identifier
    (34) term -> . literal
    (35) term -> . TK_LPAREN identifier term_plus TK_RPAREN
    (36) term -> . TK_LPAREN TK_EXISTS TK_LPAREN sorted_symbol_plus TK_RPAREN term TK_RPAREN
    (37) term -> . TK_LPAREN TK_FORALL TK_LPAREN sorted_symbol_plus TK_RPAREN term TK_RPAREN
    (38) term -> . TK_LPAREN TK_LET TK_LPAREN binding_plus TK_RPAREN term TK_RPAREN
    (79) identifier -> . TK_SYMBOL
    (80) identifier -> . TK_LPAREN TK_UNDERSCORE TK_SYMBOL index_plus TK_RPAREN
    (73) literal -> . TK_NUMERAL
    (74) literal -> . TK_BOOL_CONST
    (75) literal -> . TK_DECIMAL
    (76) literal -> . TK_HEX_CONST
    (77) literal -> . TK_BIN_CONST
    (78) literal -> . TK_STRING_LITERAL

    TK_LPAREN       shift and go to state 34
    TK_SYMBOL       shift and go to state 38
    TK_NUMERAL      shift and go to state 39
    TK_BOOL_CONST   shift and go to state 40
    TK_DECIMAL      shift and go to state 41
    TK_HEX_CONST    shift and go to state 42
    TK_BIN_CONST    shift and go to state 43
    TK_STRING_LITERAL shift and go to state 44

    term                           shift and go to state 35
    identifier                     shift and go to state 36
    literal                        shift and go to state 37

state 21

    (20) var_decl_command -> TK_LPAREN TK_DECLARE_VAR . TK_SYMBOL sort_expr TK_RPAREN

    TK_SYMBOL       shift and go to state 45


state 22

    (21) inv_constraint_command -> TK_LPAREN TK_INV_CONSTRAINT . TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_SYMBOL TK_RPAREN

    TK_SYMBOL       shift and go to state 46


state 23

    (22) set_feature_command -> TK_LPAREN TK_SET_FEATURE . TK_COLON TK_SYMBOL TK_BOOL_CONST TK_RPAREN

    TK_COLON        shift and go to state 47


state 24

    (23) synth_fun_command -> TK_LPAREN TK_SYNTH_FUN . TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr opt_grammar_def TK_RPAREN

    TK_SYMBOL       shift and go to state 48


state 25

    (24) synth_inv_command -> TK_LPAREN TK_SYNTH_INV . TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN opt_grammar_def TK_RPAREN

    TK_SYMBOL       shift and go to state 49


state 26

    (25) sort_decl_command -> TK_LPAREN TK_DECLARE_SORT . TK_SYMBOL TK_NUMERAL TK_RPAREN

    TK_SYMBOL       shift and go to state 50


state 27

    (26) fun_def_command -> TK_LPAREN TK_DEFINE_FUN . TK_SYMBOL TK_LPAREN sorted_symbol_star TK_RPAREN sort_expr term TK_RPAREN

    TK_SYMBOL       shift and go to state 51


state 28

    (27) sort_def_command -> TK_LPAREN TK_DEFINE_SORT . TK_SYMBOL symbol_star sort_expr TK_RPAREN

    TK_SYMBOL       shift and go to state 52


state 29

    (28) set_logic_command -> TK_LPAREN TK_SET_LOGIC . TK_SYMBOL TK_RPAREN

    TK_SYMBOL       shift and go to state 53


state 30

    (29) set_option_command -> TK_LPAREN TK_SET_OPTION . TK_COLON TK_SYMBOL literal TK_RPAREN

    TK_COLON        shift and go to state 54


state 31

    (30) declare_datatype_command -> TK_LPAREN TK_DECLARE_DATATYPE . TK_SYMBOL datatype_constructor_list TK_RPAREN
    (31) declare_datatype_command -> TK_LPAREN TK_DECLARE_DATATYPE . TK_LPAREN TK_SYMBOL TK_NUMERAL TK_RPAREN datatype_constructor_list TK_RPAREN

    TK_SYMBOL       shift and go to state 56
    TK_LPAREN       shift and go to state 55


state 32

    (32) declare_datatypes_command -> TK_LPAREN TK_DECLARE_DATATYPES . TK_LPAREN sort_name_and_arity_plus TK_RPAREN TK_LPAREN datatype_constructor_list_plus TK_RPAREN TK_RPAREN

    TK_LPAREN       shift and go to state 57


state 33

    (18) check_synth_command -> TK_LPAREN TK_CHECK_SYNTH TK_RPAREN .

    TK_LPAREN       reduce using rule 18 (check_synth_command -> TK_LPAREN TK_CHECK_SYNTH TK_RPAREN .)
    $end            reduce using rule 18 (check_synth_command -> TK_LPAREN TK_CHECK_SYNTH TK_RPAREN .)


state 34

    (35) term -> TK_LPAREN . identifier term_plus TK_RPAREN
    (36) term -> TK_LPAREN . TK_EXISTS TK_LPAREN sorted_symbol_plus TK_RPAREN term TK_RPAREN
    (37) term -> TK_LPAREN . TK_FORALL TK_LPAREN sorted_symbol_plus TK_RPAREN term TK_RPAREN
    (38) term -> TK_LPAREN . TK_LET TK_LPAREN binding_plus TK_RPAREN term TK_RPAREN
    (80) identifier -> TK_LPAREN . TK_UNDERSCORE TK_SYMBOL index_plus TK_RPAREN
    (79) identifier -> . TK_SYMBOL
    (80) identifier -> . TK_LPAREN TK_UNDERSCORE TK_SYMBOL index_plus TK_RPAREN

    TK_EXISTS       shift and go to state 60
    TK_FORALL       shift and go to state 61
    TK_LET          shift and go to state 62
    TK_UNDERSCORE   shift and go to state 63
    TK_SYMBOL       shift and go to state 38
    TK_LPAREN       shift and go to state 58

    identifier                     shift and go to state 59

state 35

    (19) constraint_command -> TK_LPAREN TK_CONSTRAINT term . TK_RPAREN

    TK_RPAREN       shift and go to state 64


state 36

    (33) term -> identifier .

    TK_RPAREN       reduce using rule 33 (term -> identifier .)
    TK_LPAREN       reduce using rule 33 (term -> identifier .)
    TK_SYMBOL       reduce using rule 33 (term -> identifier .)
    TK_NUMERAL      reduce using rule 33 (term -> identifier .)
    TK_BOOL_CONST   reduce using rule 33 (term -> identifier .)
    TK_DECIMAL      reduce using rule 33 (term -> identifier .)
    TK_HEX_CONST    reduce using rule 33 (term -> identifier .)
    TK_BIN_CONST    reduce using rule 33 (term -> identifier .)
    TK_STRING_LITERAL reduce using rule 33 (term -> identifier .)


state 37

    (34) term -> literal .

    TK_RPAREN       reduce using rule 34 (term -> literal .)
    TK_LPAREN       reduce using rule 34 (term -> literal .)
    TK_SYMBOL       reduce using rule 34 (term -> literal .)
    TK_NUMERAL      reduce using rule 34 (term -> literal .)
    TK_BOOL_CONST   reduce using rule 34 (term -> literal .)
    TK_DECIMAL      reduce using rule 34 (term -> literal .)
    TK_HEX_CONST    reduce using rule 34 (term -> literal .)
    TK_BIN_CONST    reduce using rule 34 (term -> literal .)
    TK_STRING_LITERAL reduce using rule 34 (term -> literal .)


state 38

    (79) identifier -> TK_SYMBOL .

    TK_RPAREN       reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_LPAREN       reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_SYMBOL       reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_NUMERAL      reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_BOOL_CONST   reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_DECIMAL      reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_HEX_CONST    reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_BIN_CONST    reduce using rule 79 (identifier -> TK_SYMBOL .)
    TK_STRING_LITERAL reduce using rule 79 (identifier -> TK_SYMBOL .)


state 39

    (73) literal -> TK_NUMERAL .

    TK_RPAREN       reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_LPAREN       reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_SYMBOL       reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_NUMERAL      reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_BOOL_CONST   reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_DECIMAL      reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_HEX_CONST    reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_BIN_CONST    reduce using rule 73 (literal -> TK_NUMERAL .)
    TK_STRING_LITERAL reduce using rule 73 (literal -> TK_NUMERAL .)


state 40

    (74) literal -> TK_BOOL_CONST .

    TK_RPAREN       reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_LPAREN       reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_SYMBOL       reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_NUMERAL      reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_BOOL_CONST   reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_DECIMAL      reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_HEX_CONST    reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_BIN_CONST    reduce using rule 74 (literal -> TK_BOOL_CONST .)
    TK_STRING_LITERAL reduce using rule 74 (literal -> TK_BOOL_CONST .)


state 41

    (75) literal -> TK_DECIMAL .

    TK_RPAREN       reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_LPAREN       reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_SYMBOL       reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_NUMERAL      reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_BOOL_CONST   reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_DECIMAL      reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_HEX_CONST    reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_BIN_CONST    reduce using rule 75 (literal -> TK_DECIMAL .)
    TK_STRING_LITERAL reduce using rule 75 (literal -> TK_DECIMAL .)


state 42

    (76) literal -> TK_HEX_CONST .

    TK_RPAREN       reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_LPAREN       reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_SYMBOL       reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_NUMERAL      reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_BOOL_CONST   reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_DECIMAL      reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_HEX_CONST    reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_BIN_CONST    reduce using rule 76 (literal -> TK_HEX_CONST .)
    TK_STRING_LITERAL reduce using rule 76 (literal -> TK_HEX_CONST .)


state 43

    (77) literal -> TK_BIN_CONST .

    TK_RPAREN       reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_LPAREN       reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_SYMBOL       reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_NUMERAL      reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_BOOL_CONST   reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_DECIMAL      reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_HEX_CONST    reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_BIN_CONST    reduce using rule 77 (literal -> TK_BIN_CONST .)
    TK_STRING_LITERAL reduce using rule 77 (literal -> TK_BIN_CONST .)


state 44

    (78) literal -> TK_STRING_LITERAL .

    TK_RPAREN       reduce using rule 78 (literal -> TK_STRING_LITERAL .)
    TK_LPAREN       reduce using rule 78 (literal -> TK_STRING_LITERAL .)
    TK_SYMBOL       reduce using rule 78 (literal -> TK_STRING_LITERAL .)
    TK_NUMERAL      reduce using rule 78 (literal -> TK_STRING_LITERAL .)
    TK_BOOL_CONST   reduce using rule 78 (literal -> TK_STRING_LITERAL .)
